--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.5",
+    "react-toastify": "^10.0.5",
+    "stripe": "^15.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "yup": "^1.4.0"
   },
